Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85361

When a dialog has a resize grip handle then it is not possible to resize with it

    XMLWordPrintable

Details

    • WebAssembly
    • 0de0a6a54c496b5c3c8d79647924476837a02354 (qt/qtbase/dev) 7d3aab065ac5d5e087e24d90069fa5693efce463 (qt/qtbase/5.15)

    Description

      When a dialog has a resize grip handle then it is not possible to resize with it. The frame can be used for resizing although this is very tricky to get right.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lpotter Lorn Potter
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes