wasm: fix resizing of qwidget windows

This also fixes the cursor changing during resize mode

Fixes: QTBUG-85361
Change-Id: Ic85a5c31a8a2dc4265a84f16fd5fcdc231062c6d
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 0de0a6a54c496b5c3c8d79647924476837a02354)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>