src/plugins/platforms/wasm/qwasmeventtranslator.h
@@ -37,6 +37,7 @@
 #include "qwasmwindow.h"
 #include <QtGui/qtouchdevice.h>
 #include <QHash>
+#include <QCursor>
 
 QT_BEGIN_NAMESPACE
 
@@ -94,6 +95,7 @@ private:
 
     Qt::Key m_emDeadKey = Qt::Key_unknown;
     bool m_emStickyDeadKey = false;
+    QCursor cursorForMode(QWasmWindow::ResizeMode mode);
 };
 
 QT_END_NAMESPACE
